# account-mall

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TASKS.md  claude.md  docker-compose.yml  eslint.config.mjs  jest.config.ts  jest.setup.ts  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  prisma.config.ts  proxy.ts  test-prisma.ts  tsconfig.json  vercel.json
__mocks__/: prisma.ts
__tests__/: admin-cards-filters.test.ts
app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
automation/: .env.example  README.md  __init__.py  apple_login_flow.py  card_parser.py  cli.py  config.py  pyproject.toml
automation/runners/: __init__.py  change_region.py  password_change.py  status_test.py
docs/: automation-apple-login-best-practices.md  invitation-feature-test-assessment.md  rich-text-editor-research.md  seo-check-report.md
e2e/: distributor-guide.spec.ts  distributor-invite.spec.ts  exit-discount.spec.ts  global-setup.ts  home.spec.ts  invitation.spec.ts  order-lookup.spec.ts  payment-flow.spec.ts
hooks/: use-exit-intent.ts  use-fingerprint.ts  use-sync-promo-code-to-cookie.ts
lib/: alipay.ts  api-response.ts  auth-guard.ts  auth.ts  auto-fetch-card.ts  close-expired-orders.ts  complete-pending-order.ts  config-client.ts  config.ts  description.ts  distributor-tier-summary.ts  email.ts  exit-discount.ts  fetch-with-timeout.ts  form-utils.ts  free-shared-card.ts  get-payment-url.ts  order-completion-email.ts  order-history-storage.ts  order-success-token.ts  utils.ts  (+12 more)
(+424 files in other folders)
